# qjson

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN-complex-keys.md  PLAN-crypto.md  PLAN-datalog.md  PLAN-lemon-parser.md  PLAN-qjq.md  PLAN-wyatt-migration.md  README.md  docker-compose.yml  index.html  package.json  pyproject.toml  qjq  test_brain  test_qjson_asan  test_qjson_dbg  test_reactive  test_resolve  test_solve
.github/workflows/: release.yml  test.yml
attic/: README.md
attic/native/: qjson_crypto.c  qjson_crypto.h  qjson_crypto_ext.c  qjson_db.c  qjson_db.h  qjson_resolve.c  qjson_resolve.h  qjson_solve_ext.c
attic/src/: qjq.py  qjson.py  qjson_query.py  qjson_sql.py
attic/test/: test-qjson.js  (+5 more)
docs/: datalog.md  qjson.md  qsql.md  tutorial.html
examples/: compound_interest.py  graph_closure.py  mortgage.py  relational_query.py
experiment/: pg_nextafter.sql  pg_nextafter_ref.c  ref_data.csv  ref_harness  test_pg_nextafter.py
native/: embed_js.sh  libbf_shim.c  qjq.c  qjson.c  qjson.h  qjson_crypto.c  qjson_crypto.h  qjson_db.c  qjson_db.h  qjson_js.h  qjson_lex.c  qjson_lex.h  qjson_parse.c  qjson_parse.h  qjson_parse.out  qjson_parse.y  qjson_parse_ctx.h  qjson_resolve.c  qjson_sqlite_ext.c  qjson_types.h
qjson/: __init__.py  query.py  sql.py
sql/: qjson_pg.sql
src/: qjq.py  qjson-sql.js  qjson.js  qjson.py  qjson_query.py  qjson_sql.py  qsql.js  qsql.py
test/: test-qjson.js  test_brain.c  test_qjson.c  test_qjson.py  test_qjson_sql.py  test_reactive.c  test_solve.c
wasm/: Dockerfile  build-wasm.sh  build.sh  qjson_wasm_init.c
(+13 files in other folders)
